cabal-version:       2.4
name:                typerep-map
version:             0.3.2
synopsis:            Efficient implementation of a dependent map with types as keys
description:
    A dependent map from type representations to values of these types.
    .
    Here is an illustration of such a map:
    .
    >     TMap
    > ---------------
    >  Int  -> 5
    >  Bool -> True
    >  Char -> 'x'
    .
    In addition to @TMap@, we provide @TypeRepMap@ parametrized by a
    @vinyl@-style interpretation. This data structure is equivalent to @DMap
    TypeRep@, but with significantly more efficient lookups.

homepage:            https://github.com/kowainik/typerep-map
bug-reports:         https://github.com/kowainik/typerep-map/issues
license:             MIT
license-file:        LICENSE
author:              Veronika Romashkina, Vladislav Zavialov, Dmitrii Kovanikov
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2017-2019 Kowainik
category:            Data, Data Structures, Types
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.1

source-repository head
  type:                git
  location:            https://github.com/kowainik/typerep-map.git

common common-options
  build-depends:       base >= 4.10 && < 4.14

  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       DerivingStrategies
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications
  if impl(ghc >= 8.8.1)
    ghc-options:       -Wmissing-deriving-strategies

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Data.TMap
                       Data.TypeRepMap
                       Data.TypeRepMap.Internal

  build-depends:       containers >= 0.5.10.2 && < 0.7
                     , ghc-prim ^>= 0.5.1.1
                     , primitive ^>= 0.7.0
                     , deepseq ^>= 1.4
